# tritonbench

./: .gitignore  .gitmodules  README.md  install.py  pyproject.toml  requirements.txt  run.py
.ci/bisect/: run.sh
.ci/conda/: install.sh
.ci/test_infra/: oss_ci_benchmark_v3.py
.ci/triton/: triton_install_utils.sh
.ci/tritonbench/: install.sh  run-benchmark.sh  setup-env.sh  setup-nvidia-path.sh  setup-rocm-path.sh  test-gpu.sh
.ci/upload/: scribe.py
.github/scripts/: generate_tritonbench_matrix.py
.github/workflows/: _linux-benchmark-mi350.yml  _linux-benchmark.yml  _linux-bisect.yml  _linux-test-h100.yml  _linux-test-mi350.yml  benchmark.yml  bisect.yaml  docker-rocm.yaml  docker.yaml  nightly.yml  pr.yaml  timing_accuracy.yml
benchmarks/: common.py
benchmarks/compare_benchmarks/: run.py  utils.py
benchmarks/compile_time/: ci.yaml  run.py
benchmarks/dump_ir/: run.py
benchmarks/mojo_matmul/: run.py
benchmarks/mpp_analysis/: run.py
benchmarks/nightly/: ci.yaml  mi350_ci.yaml  run.py
benchmarks/pt2/: ci.yaml  run.py
benchmarks/ptxas_check/: run.py
benchmarks/run_config/: bf16_blackwell_attentions_fwd_shape4.yaml  fp8_gemm_blackwell_rowwise_config_1.yaml  fp8_gemm_h100_blockwise1x128_blockwise128x128_large_K.yaml
benchmarks/sweep_runner/: __init__.py  compile_time.yaml  nightly.yaml  pt2.yaml  pt2_nightly.yaml  run.py  triton.yaml
benchmarks/timing_accuracy/: ci.yaml  run.py  triton.yaml  (+1 more)
docker/: tritonbench-nightly.dockerfile  tritonbench-rocm-nightly.dockerfile
docs/: install.md
tools/: cuda_utils.py  git_utils.py  rocm_utils.py
(+149 files in other folders)
