[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tritonbench"
version = "0.0.1"
dependencies = [
    "torch",
    "triton",
    "psutil",
    "tabulate",
    "matplotlib",
    "packaging",
]

[dependency-groups]
dev-nvidia = [
    "pybind11",
    "packaging",
    "psutil",
    "tabulate",
    "matplotlib",
    "pyyaml",
    "nvidia-ml-py",
    "transformers==5.0.0rc3",
]
dev-amd = [
    "packaging",
    "psutil",
    "tabulate",
    "matplotlib",
    "pyyaml",
    "transformers==5.0.0rc3",
]
dev-cpu = [
    "packaging",
    "psutil",
    "tabulate",
    "matplotlib",
    "pyyaml",
    "transformers==5.0.0rc3",
]
dev-numpy = [
    "numpy==2.0.2; python_version < '3.10'",
    "numpy==2.1.0; python_version >= '3.10' and python_version < '3.14'",
    "numpy==2.3.4; python_version >= '3.14'",
]
ci = [
    "boto3",
    "pyyaml",
    "requests",
]

[tool.setuptools.packages.find]
include = ["tritonbench*"]

[tool.ufmt]
formatter = "ruff-api"
sorter = "usort"
excludes = ["submodules/"]

[tool.usort]
first_party_detection = false
